src/objects/Clinical_Room__c.object
<CustomObject>
    <fields>
        <fullName>Center_Information__c</fullName>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Rooms</relationshipLabel>
        <relationshipName>Clinical_Rooms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date__c</fullName>
        <label>Cut Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prosth</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Recovery</fullName>
                </value>
                <value>
                    <fullName>Hygiene</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Clinical Room</label>
    <nameField>
        <label>Clinical Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinical Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>